channel name test

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     }
   </style>
 
-  <title>YouTube Channel Data</title>
+  <title>FHIX45 WEB</title>
 </head>
 
 <body>
   <nav class="black">
     <div class="nav-wrapper">
       <div class="container">
-        <a href="#!" class="brand-logo">YouTube Channel Data</a>
+        <a href="#!" class="brand-logo">FHIX45 WEB</a>
       </div>
     </div>
   </nav>
@@ -52,8 +52,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   <script src="main.js"></script>
-  <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()" onreadystatechange="if (this.readyState === 'complete') this.onload()">
-  </script>
+  <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
+    onreadystatechange="if (this.readyState === 'complete') this.onload()">
+    </script>
 </body>
 
 </html>
