--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="black">
     <div class="nav-wrapper">
       <div class="container">
-        <a href="#!" class="brand-logo">FHIX45 WEB</a>
+        <a href="#!" class="brand-logo">YouTube Channel Data</a>
       </div>
     </div>
   </nav>
@@ -35,14 +35,14 @@
       <br>
       <div id="content">
         <div class="row">
-          <div class="col s6">
+          <!-- <div class="col s6">
             <form id="channel-form">
               <div class="input-field col s6">
                 <input type="text" placeholder="Enter Channel Name" id="channel-input">
                 <input type="submit" value="Get Channel Data" class="btn grey">
               </div>
             </form>
-          </div>
+          </div> -->
           <div id="channel-data" class="col s6"></div>
         </div>
         <div class="row" id="video-container"></div>
