--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           </div> -->
           <div id="channel-data" class="col s6"></div>
         </div>
+        <div class="col" id="playlist-container"></div>
         <div class="row" id="video-container"></div>
       </div>
     </div>
